--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,3 +1,4 @@
+# for local development
 local_backend: true
 site_url: http://localhost:8080
 
@@ -5,8 +6,8 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: /content/uploads
-public_folder: /content/uploads
+media_folder: /uploads
+public_folder: /uploads
 locale: en
 # publish_mode: editorial_workflow
 
@@ -18,8 +19,19 @@ collections:
     delete: false
     slug: "{{slug}}"
     files:
-      - label: Errors
-        name: config-errors
+      - name: config-index
+        label: Home page
+        file: src/_data/config/index.json
+        fields:
+          - name: title
+            label: Title
+            widget: string
+          - name: body
+            label: Content
+            widget: markdown
+
+      - name: config-errors
+        label: Errors
         file: src/_data/config/errors.json
         fields:
           - label: 404 Error
