--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3.0.0
         with:
-          node-version: '14'
+          node-version: '16'
 
-      - run: npm install
+      - run: npm ci
       - run: npm run build
